--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
         <!-- 顶部开始 -->
         <div class="container">
             <div class="logo">
-                <a href="./index.html">X-admin v2.2</a></div>
+                <a href="./index.html"></a></div>
             <div class="left_open">
                 <a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
             </div>
@@ -148,19 +148,19 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="城市联动">&#xe723;</i>
-                            <cite>城市联动</cite>
-                            <i class="iconfont nav_right">&#xe697;</i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a onclick="xadmin.add_tab('三级地区联动','city.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>三级地区联动</cite></a>
-                            </li>
-                        </ul>
-                    </li>
+<!--                    <li>-->
+<!--                        <a href="javascript:;">-->
+<!--                            <i class="iconfont left-nav-li" lay-tips="城市联动">&#xe723;</i>-->
+<!--                            <cite>城市联动</cite>-->
+<!--                            <i class="iconfont nav_right">&#xe697;</i></a>-->
+<!--                        <ul class="sub-menu">-->
+<!--                            <li>-->
+<!--                                <a onclick="xadmin.add_tab('三级地区联动','city.html')">-->
+<!--                                    <i class="iconfont">&#xe6a7;</i>-->
+<!--                                    <cite>三级地区联动</cite></a>-->
+<!--                            </li>-->
+<!--                        </ul>-->
+<!--                    </li>-->
                     <li>
                         <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="招行新闻管理">&#xe726;</i>
@@ -168,12 +168,12 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('招行新闻录入','/xxlr?type=zygg')">
+                                <a onclick="xadmin.add_tab('招行新闻录入','/xxlr?type=zhxw')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>录入</cite></a>
                             </li>
                             <li>
-                                <a onclick="xadmin.add_tab('招行新闻查看','/getList?type=zygg')">
+                                <a onclick="xadmin.add_tab('招行新闻查看','/getList?type=zhxw')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看</cite></a>
                             </li>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="layui-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <iframe src='./welcome.html' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+                        <iframe src='' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
                     </div>
                 </div>
                 <div id="tab_show"></div>
